[project]
name = "reddit-stock-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13.2",
    "aiosignal==1.4.0",
    "attrs==25.4.0",
    "certifi==2025.11.12",
    "charset-normalizer==3.4.4",
    "coloredlogs==15.0.1",
    "filelock==3.20.1",
    "flatbuffers==25.12.19",
    "frozenlist==1.8.0",
    "fsspec==2025.12.0",
    "gliner==0.2.24",
    "hf-xet==1.2.0",
    "huggingface-hub==0.36.0",
    "humanfriendly==10.0",
    "idna==3.11",
    "jinja2==3.1.6",
    "markupsafe==3.0.3",
    "mpmath==1.3.0",
    "multidict==6.7.0",
    "networkx==3.6.1",
    "numpy==2.4.0",
    "nvidia-cublas-cu12==12.8.4.1",
    "nvidia-cuda-cupti-cu12==12.8.90",
    "nvidia-cuda-nvrtc-cu12==12.8.93",
    "nvidia-cuda-runtime-cu12==12.8.90",
    "nvidia-cudnn-cu12==9.10.2.21",
    "nvidia-cufft-cu12==11.3.3.83",
    "nvidia-cufile-cu12==1.13.1.3",
    "nvidia-curand-cu12==10.3.9.90",
    "nvidia-cusolver-cu12==11.7.3.90",
    "nvidia-cusparse-cu12==12.5.8.93",
    "nvidia-cusparselt-cu12==0.7.1",
    "nvidia-nccl-cu12==2.27.5",
    "nvidia-nvjitlink-cu12==12.8.93",
    "nvidia-nvshmem-cu12==3.3.20",
    "nvidia-nvtx-cu12==12.8.90",
    "onnxruntime==1.23.2",
    "packaging==25.0",
    "propcache==0.4.1",
    "protobuf==6.33.2",
    "psycopg==3.3.2",
    "python-dotenv==1.2.1",
    "pyyaml==6.0.3",
    "regex==2025.11.3",
    "requests==2.32.5",
    "safetensors==0.7.0",
    "sentencepiece==0.2.1",
    "setuptools==80.9.0",
    "sympy==1.14.0",
    "tokenizers==0.22.1",
    "torch==2.9.1",
    "tqdm==4.67.1",
    "transformers==4.57.3",
    "triton==3.5.1",
    "typing-extensions==4.15.0",
    "urllib3==2.6.2",
    "yarl==1.22.0",
]
